--- a/src/index.css
+++ b/src/index.css
@@ -57,3 +57,12 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+.hidden-video{
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  visibility: hidden;
+  
+}
