--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,9 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
+  color:#0f2832;
+  background: #fefefe;;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -16,7 +14,6 @@
 
 body {
   display: flex;
-
   min-width: 320px;
   min-height: 100vh;
 }
