--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-
-
 body {
   display: flex;
   min-width: 320px;
@@ -8,8 +6,8 @@ body {
   line-height: 1.5;
   font-weight: 400;
   color-scheme: light dark;
-  color:#0f2832;
-  background: #fefefe;;
+  color: #0f2832;
+  background: #fefefe;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -54,27 +52,15 @@ button:focus-visible {
   }
 }
 
-.hidden-video{
+.hidden-video {
   position: absolute;
   top: 0;
   left: 0;
   z-index: -1;
   visibility: hidden;
-  
 }
 
-#externalWebsiteFrame{
+#externalWebsiteFrame {
   height: 80vh;
   width: 150vh;
-}
-
-
-@keyframes blinkAnimation {
-  0% { background-color: #E74C3C; }
-  50% { background-color: transparent; }
-  100% { background-color: #E74C3C; }
-}
-
-.blink {
-  animation: blinkAnimation 1s infinite;
 }
